[package]
name = "local-latency-slider"
version = "4.0.0"
authors = ["blu-dev", "saad-script"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[package.metadata.symbaker]

[lib]
crate-type = ["cdylib"]

[dependencies]
ninput = { git = "https://github.com/blu-dev/ninput" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
libc-nnsdk = { git = "https://github.com/ultimate-research/libc-nnsdk" }
rand = { git = "https://github.com/skyline-rs/rand", optional = true }
symbaker = { git = "https://github.com/BlankMauser/symbaker" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[features]
default = []
nro-entry = []
run_tests = ["rand"]
